--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 
 dependencies:
   provider: ^6.1.2
+  flutter_bloc: ^8.1.6
   internet_connection_checker: ^2.0.0
   http: ^1.2.2
   flutter_screenutil: ^5.9.3
